logs/Slang/chapter-8/8.5--properties_enum.sv.log
name: properties_enum
description: enum defined inside class
should_fail: 0
tags: 8.5
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.5--properties_enum.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.5--properties_enum.sv:8:2: error: language feature not yet supported
	class test_cls;
	^~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.5--properties_enum.sv:12:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.5--properties_enum.sv:15:14: error: language feature not yet supported
		test_obj = new;
		           ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.5--properties_enum.sv:16:12: error: use of undeclared identifier 'test_cls'
		$display(test_cls.C);
		         ^~~~~~~~
